Bug 33356 - Cannot remove RTL and LTR icons from the toolbar
Summary: Cannot remove RTL and LTR icons from the toolbar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.0 RC4
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.0.0 target:3.6.5
Keywords:
: 33472 33752 37389 45702 49860 (view as bug list)
Depends on:
Blocks: RTL-UI
  Show dependency treegraph
 
Reported: 2011-01-21 15:27 UTC by ammine007
Modified: 2022-09-14 12:48 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ammine007 2011-01-21 15:27:05 UTC
I have enabled Right-To-Left support in OOo with this setting:
Tools -> Options -> Language Settings -> Language -> Enabled for Complex Text Layout

Now I correctly have Paragraph RTL and LTR buttons on the toolbar. However,
these buttons cannot be removed by right-clicking on the toolbar and selecting
"visible buttons". These buttons should be removable like any other toolbar button.

(de)/selecting visible buttons from the formatting toolbar does not add/remove
the rtl or ltr buttons, while other buttons are handled correctly!

Linux/Ubuntu-10.10-32bits with LibO-3.3-RC4
and
WinXP with LibO-3.3-RC4

good luck to you all !
Comment 1 ammine007 2011-01-21 16:03:49 UTC
AllLanguages=en-US
buildid=330m19(Build:6)
ExtensionUpdateURL=http://updateexte.libreoffice.org/ExtensionUpdateService/check.Update
OOOBaseVersion=3.3
ProductBuildid=6
ProductMajor=330
ProductMinor=19
ProductSource=OOO330
UpdateID=LibreOffice_3_en-US
UpdateURL=
UpdateUserAgent=<PRODUCT> (${buildid}; ${_OS}; ${_ARCH}; BundledLanguages=${AllLanguages})
Comment 2 Rainer Bielefeld Retired 2011-01-22 01:03:43 UTC
[Reproducible] with "LibreOffice 3.3.0 RC4 - WIN7  Home Premium (64bit) English UI from "All Languages" installation [OOO330m19 (build 6 / tag 3.3.0.4)]"

My test with only Complex Text Layout enabled:
Generally if you check / uncheck a button in menu 'Tools > Customize > Toolbars > Formatting' the icon immediately appears or disappears. But icons 'LTR' and 'RTL' always remain visible, they can not be removed. Additional effect: visibility of buttons 'Text direction from left to right' 'Text direction from top to bottom' can not be actuated using menu, they are always invisible, but if visibility is checked, they always will appear / disappear for a split second.

The problem remains when I create a new toolbar only for these buttons.

It's the same in WRITER and CALC, others not tested.

With "Asian languages" additionally enabled, buttons 'Text direction from left to right' 'Text direction from top to bottom' always will be visible, can not be made invisible by unchecking. 

That's at least worrying.
Comment 3 Noel Power 2011-01-24 02:35:27 UTC
tentatively assign to caolan ( who can assign back to the list if not the a suitable assignee )
Comment 4 Noel Power 2011-01-25 11:20:34 UTC
*** Bug 33472 has been marked as a duplicate of this bug. ***
Comment 5 Noel Power 2011-01-25 11:22:02 UTC
hehe, looks like I didn't assign to caolan, anyway, maybe I'll have a cut off this myself
Comment 6 Noel Power 2011-01-25 11:22:31 UTC
also worth noting that this is the same behaviour as openoffice rc10
Comment 7 Rainer Bielefeld Retired 2011-05-19 22:47:53 UTC
*** Bug 37389 has been marked as a duplicate of this bug. ***
Comment 8 LeMoyne Castle 2011-06-15 00:27:02 UTC
*** Bug 33752 has been marked as a duplicate of this bug. ***
Comment 9 Eduard Rudyk 2012-03-19 03:05:06 UTC
Visibility/invisibility of RTL-LTR buttons depends solely on enable/disable of CTL. It's different from all other buttons and is not expected behavior. I wasted complete evening on finding out why these buttons are not displayed. So I would suggest to change it or at least give some kind of information message to the user.
Comment 10 Urmas 2012-09-20 07:09:33 UTC
*** Bug 45702 has been marked as a duplicate of this bug. ***
Comment 11 Urmas 2012-09-20 07:09:48 UTC
*** Bug 49860 has been marked as a duplicate of this bug. ***
Comment 12 Noel Power 2012-11-13 20:07:26 UTC
I failed to get a chance to look at it ( and completely forgot about it ) sorry for hogging this bug and not doing anything about it, putting back to list
Comment 13 Noel Power 2012-11-13 20:53:47 UTC
(In reply to comment #12)
> I failed to get a chance to look at it ( and completely forgot about it )
> sorry for hogging this bug and not doing anything about it, putting back to
> list

anyway I felt guilty, so here is where it is all going wrong

http://opengrok.libreoffice.org/xref/core/svx/source/tbxctrls/verttexttbxctrl.cxx#90
Comment 14 Not Assigned 2012-11-14 09:47:10 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5db100f83ca595ceadf85db7963e5dc42f614027

allow hiding of rtl or ltr buttons on toolbars when ctl selected fdo#33356



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Noel Power 2012-11-14 10:05:42 UTC
would be good to hear if this fix is the right one, basicially the rtl buttons are hidden if no ctl etc. is selected. If ctl is selected you should be able to hide the buttons as you wish

review for 3.6 is here https://gerrit.libreoffice.org/1055
Comment 16 Not Assigned 2012-11-14 11:11:51 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c2aa763bd762d161eca9c07f1f31885d6bc751f6&g=libreoffice-3-6

allow hiding of rtl or ltr buttons on toolbars when ctl selected fdo#33356


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Lior Kaplan 2012-11-17 15:01:03 UTC
Verified fix on private build from master.
Comment 18 abdulmajeed 2013-09-05 12:35:44 UTC
(In reply to comment #15)
> would be good to hear if this fix is the right one, basicially the rtl
> buttons are hidden if no ctl etc. is selected. If ctl is selected you should
> be able to hide the buttons as you wish
> 
> review for 3.6 is here https://gerrit.libreoffice.org/1055

Hi Noel it turns out your fix cause another bug
the bug is 

1-disable CTL (the buttons will be gone) 
2-enable it again current behavior the buttons are hidden

expected behavior:
you should have your buttons back


Note: when you restart libreoffice you will see the buttons again.

so any idea how solve it without reverting this patch
Comment 19 Tiger-Heli 2013-09-06 15:00:55 UTC
Comment 18 confirmed:

(But it is a lot better than it used to be.)

Previously, buttons were only a function of enabling/disabling CTL - customizing the toolbar had no effect.

Now - buttons and CTL are enabled by default.
Disabling CTL removes the buttons.
Leaving CTL enabled and unchecking the buttons in Customize Toolbar removes the buttons.  (This is a higher priority call - i.e. if you manually remove the buttons using customize toolbar and then disable and re-enable CTL, the buttons will stay hidden).
Re-checking the buttons in Customize Toolbar restores the buttons.

However, as mentioned, if you have the buttons enabled on the toolbar and disable CTL and then re-enable CTL, the buttons are enabled, but they don't appear until you close and re-open the application.

It's a very minor issue, but technically, it is not expected or desired behavior.
Comment 20 Sury 2020-01-18 10:16:51 UTC
This bug is still around. 

Thanks for the report, beause for some reason I couldn't enable these buttons to pop up at all until I ticked enable complex layout.