allow hiding of rtl or ltr buttons on toolbars when ctl selected fdo#33356

Change-Id: I56ce5da755578e35215aa5ca2d37835dcbffbf7d
Reviewed-on: https://gerrit.libreoffice.org/1054
Reviewed-by: Noel Power <noel.power@suse.com>
Tested-by: Noel Power <noel.power@suse.com>